setup the click handlers for editing

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,10 +1,27 @@
 @import 'yeticss'
 
+::selection
+	background-color #ff99e7
+	color #fff
+	text-shadow none
+::-moz-selection
+	background-color #ff99e7
+	color #fff
+	text-shadow none
+
+.octicon:hover
+	cursor pointer
+
 header
-	padding-top 4em
+	position relative
+	padding-top 5em
 
 	h1
-		font-size 2.3rem
+		font-size 2.7em
+
+	.octicon-octoface
+		width 32px
+		text-align center
 
 .label
 	height 4em
@@ -19,3 +36,4 @@ header
 	> span
 		margin-left 10px
 		margin-right 10px
+
